feat!: make stake pools pagination a required arg - enforce `pagination` as required argument - add pagination page size limit constraints in provider - interpret the error as a 400 code response - update OpenApi schema - remove obsolete `args:[]` usage in providers tests - fetch all pools in wallet resolved by stake pools provider
